[package]
name = "relative-path"
version = "1.9.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.56"
description = "Portable, relative paths for Rust."
documentation = "https://docs.rs/relative-path"
readme = "README.md"
homepage = "https://github.com/udoprog/relative-path"
repository = "https://github.com/udoprog/relative-path"
license = "MIT OR Apache-2.0"
keywords = ["path"]
categories = ["filesystem"]

[features]
default = []

[dependencies]
serde = { version = "1.0.160", optional = true }

[dev-dependencies]
serde = { version = "1.0.160", features = ["derive"] }
