[package]
name = "relative-path"
version = "1.9.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.56"
description = "Portable, relative paths for Rust."
documentation = "https://docs.rs/relative-path"
readme = "README.md"
homepage = "https://github.com/udoprog/relative-path"
repository = "https://github.com/udoprog/relative-path"
license = "MIT OR Apache-2.0"
keywords = ["path"]
categories = ["filesystem"]

[features]
default = ["root"]
root = ["dep:windows-sys"]

[dependencies]
serde = { version = "1.0.160", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
optional = true
features = [
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Kernel",
]

[dev-dependencies]
anyhow = "1.0.76"
serde = { version = "1.0.160", features = ["derive"] }
